[package]
name = "ruvik"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = { version= "0.17.3", features = ["dynamic_linking", "wav"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
